--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -1633,6 +1633,26 @@
   number = {1}
 }
 
+@article{dongBiophysicalHomoeostasisLeaf2017,
+  title = {Biophysical Homoeostasis of Leaf Temperature: {{A}} Neglected Process for Vegetation and Land-Surface Modelling},
+  shorttitle = {Biophysical Homoeostasis of Leaf Temperature},
+  author = {Dong, N. and Prentice, I. C. and Harrison, S. P. and Song, Q. H. and Zhang, Y. P.},
+  date = {2017},
+  journaltitle = {Global Ecology and Biogeography},
+  volume = {26},
+  pages = {998--1007},
+  issn = {1466-8238},
+  doi = {10.1111/geb.12614},
+  url = {http://onlinelibrary.wiley.com/doi/abs/10.1111/geb.12614},
+  urldate = {2021-04-16},
+  abstract = {Aim Leaf and air temperatures are seldom equal, but many vegetation models assume that they are. Land-surface models calculate canopy temperatures, but how well they do so is unknown. We encourage consideration of the leaf- and canopy-to-air temperature difference (ΔΤ) as a benchmark for land-surface modelling and an important feature of plant and ecosystem function. Location Tropical SW China. Time period 2013. Major Taxa studies Tropical trees. Methods We illustrate diurnal cycles of leaf- and canopy-to-air temperature difference (ΔΤ) with field measurements in a tropical dry woodland and with continuous monitoring data in a tropical seasonal forest. The Priestley–Taylor (PT) and Penman–Monteith (PM) approaches to evapotranspiration are used to provide insights into the interpretation and prediction of ΔT. Field measurements are also compared with land-surface model results obtained with the Joint U.K. Land Environment Simulator (JULES) set up for the conditions of the site. Results The ΔT followed a consistent diurnal cycle, with negative values at night (attributable to negative net radiation) becoming positive in the morning, reaching a plateau and becoming negative again when air temperature exceeded a ‘crossover’ in the 24–29 °C range. Daily time courses of ΔT could be approximated by either the PT or the PM model, but JULES tended to underestimate the magnitude of negative ΔT. Main conclusions Leaves with adequate water supply are partly buffered against air-temperature variations, through a passive biophysical mechanism. This is likely to be important for optimal leaf function, and land-surface and vegetation models should aim to reproduce it.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/geb.12614},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\5SKUEQR7\\Dong et al. - 2017 - Biophysical homoeostasis of leaf temperature A ne.pdf},
+  keywords = {boundary-layer conductance,crossover temperature,energy balance,land-surface model,leaf temperature,stomatal conductance,transpiration},
+  langid = {english},
+  number = {9}
+}
+
 @article{doughtyAreTropicalForests2008,
   title = {Are Tropical Forests near a High Temperature Threshold?},
   author = {Doughty, Christopher E. and Goulden, Michael L.},
@@ -2268,6 +2288,25 @@
   abstract = {• Leaf respiration and its temperature response were measured in 4-m-tall, 1-yr-old Populus deltoides trees to assess the effect of within-canopy distribution of respiratory physiology on total foliar C exchange of a model ecosystem at Biosphere 2. • Over the course of five nights, air temperature was varied over a 10°C range and the steady-state rate of leaf respiration was measured. These data were then modeled to calculate the temperature response of leaf and canopy respiration. • Results indicate that there is considerable within-canopy variation in both the rate of respiration and its temperature response and that these variables are most strongly related to leaf carbohydrate and leaf N. Scaling these results to the ecosystem level demonstrates the importance of quantifying the vertical distribution of respiratory physiology, particularly at lower temperatures. • Simplifying assumptions regarding the variation in respiration and its temperature response with canopy height tend to result in an underestimation of the actual C loss if the assumptions are based on lower- or mid-canopy leaf physiology, but overestimate C loss if the model assumptions are based on upper-canopy physiology.},
   annotation = {\_eprint: https://nph.onlinelibrary.wiley.com/doi/pdf/10.1046/j.1469-8137.2002.00410.x},
   file = {C\:\\Users\\Me\\Zotero\\storage\\XZQJVCJW\\Griffin et al. - 2002 - Canopy position affects the temperature response o.pdf;C\:\\Users\\Me\\Zotero\\storage\\LT9FTM6B\\j.1469-8137.2002.00410.html},
+  keywords = {Biosphere 2,carbohydrates,nitrogen,Populus deltoides (cottonwood),Q10,respiration,scaling,temperature},
+  langid = {english},
+  number = {3}
+}
+
+@article{griffinCanopyPositionAffects2002a,
+  title = {Canopy Position Affects the Temperature Response of Leaf Respiration in {{Populus}} Deltoides},
+  author = {Griffin, Kevin L. and Turnbull, Matthew and Murthy, Ramesh},
+  date = {2002},
+  journaltitle = {New Phytologist},
+  volume = {154},
+  pages = {609--619},
+  issn = {1469-8137},
+  doi = {10.1046/j.1469-8137.2002.00410.x},
+  url = {http://nph.onlinelibrary.wiley.com/doi/abs/10.1046/j.1469-8137.2002.00410.x},
+  urldate = {2021-04-16},
+  abstract = {• Leaf respiration and its temperature response were measured in 4-m-tall, 1-yr-old Populus deltoides trees to assess the effect of within-canopy distribution of respiratory physiology on total foliar C exchange of a model ecosystem at Biosphere 2. • Over the course of five nights, air temperature was varied over a 10°C range and the steady-state rate of leaf respiration was measured. These data were then modeled to calculate the temperature response of leaf and canopy respiration. • Results indicate that there is considerable within-canopy variation in both the rate of respiration and its temperature response and that these variables are most strongly related to leaf carbohydrate and leaf N. Scaling these results to the ecosystem level demonstrates the importance of quantifying the vertical distribution of respiratory physiology, particularly at lower temperatures. • Simplifying assumptions regarding the variation in respiration and its temperature response with canopy height tend to result in an underestimation of the actual C loss if the assumptions are based on lower- or mid-canopy leaf physiology, but overestimate C loss if the model assumptions are based on upper-canopy physiology.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1046/j.1469-8137.2002.00410.x},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\DTYVNKJT\\Griffin et al. - 2002 - Canopy position affects the temperature response o.pdf;C\:\\Users\\Me\\Zotero\\storage\\2456AM7X\\j.1469-8137.2002.00410.html},
   keywords = {Biosphere 2,carbohydrates,nitrogen,Populus deltoides (cottonwood),Q10,respiration,scaling,temperature},
   langid = {english},
   number = {3}
@@ -3097,6 +3136,41 @@
   number = {4}
 }
 
+@article{kochLimitsTreeHeight2004,
+  title = {The Limits to Tree Height},
+  author = {Koch, George W. and Sillett, Stephen C. and Jennings, Gregory M. and Davis, Stephen D.},
+  date = {2004-04},
+  journaltitle = {Nature},
+  volume = {428},
+  pages = {851--854},
+  issn = {0028-0836, 1476-4687},
+  doi = {10.1038/nature02417},
+  url = {http://www.nature.com/articles/nature02417},
+  urldate = {2021-04-16},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\SBJNCJW4\\Koch et al. - 2004 - The limits to tree height.pdf},
+  langid = {english},
+  number = {6985}
+}
+
+@article{kochLimitsTreeHeight2004a,
+  title = {The Limits to Tree Height},
+  author = {Koch, George W. and Sillett, Stephen C. and Jennings, Gregory M. and Davis, Stephen D.},
+  date = {2004-04},
+  journaltitle = {Nature},
+  volume = {428},
+  pages = {851--854},
+  publisher = {{Nature Publishing Group}},
+  issn = {1476-4687},
+  doi = {10.1038/nature02417},
+  url = {http://www.nature.com/articles/nature02417},
+  urldate = {2021-04-16},
+  abstract = {Trees grow tall where resources are abundant, stresses are minor, and competition for light places a premium on height growth1,2. The height to which trees can grow and the biophysical determinants of maximum height are poorly understood. Some models predict heights of up to 120\,m in the absence of mechanical damage3,4, but there are historical accounts of taller trees5. Current hypotheses of height limitation focus on increasing water transport constraints in taller trees and the resulting reductions in leaf photosynthesis6. We studied redwoods (Sequoia sempervirens), including the tallest known tree on Earth (112.7\,m), in wet temperate forests of northern California. Our regression analyses of height gradients in leaf functional characteristics estimate a maximum tree height of 122–130\,m barring mechanical damage, similar to the tallest recorded trees of the past. As trees grow taller, increasing leaf water stress due to gravity and path length resistance may ultimately limit leaf expansion and photosynthesis for further height growth, even with ample soil moisture.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\9FN3GQLI\\Koch et al. - 2004 - The limits to tree height.pdf},
+  issue = {6985},
+  langid = {english},
+  number = {6985}
+}
+
 @article{koike_leaf_2001,
   title = {Leaf Morphology and Photosynthetic Adjustments among Deciduous Broad-Leaved Trees within the Vertical Canopy Profile},
   author = {Koike, Takayoshi and Kitao, Mitsutoshi and Maruyama, Yutaka and Mori, Shigeta and Lei, Thomasi T.},
@@ -3397,6 +3471,54 @@
   keywords = {canopy disturbance,determinants of plant community diversity and structure,growth rate,irradiance,leaf life span,leaf mass per area,niche differentiation,phenotypic plasticity,shade tolerance,tropical moist forest},
   langid = {english},
   number = {6}
+}
+
+@article{lawLeafAreaDistribution2001,
+  title = {Leaf Area Distribution and Radiative Transfer in Open-Canopy Forests: Implications for Mass and Energy Exchange},
+  shorttitle = {Leaf Area Distribution and Radiative Transfer in Open-Canopy Forests},
+  author = {Law, Beverly E. and Cescatti, Alessandro and Baldocchi, David D.},
+  date = {2001-08-01},
+  journaltitle = {Tree Physiology},
+  volume = {21},
+  pages = {777--787},
+  issn = {0829-318X},
+  doi = {10.1093/treephys/21.12-13.777},
+  url = {https://doi.org/10.1093/treephys/21.12-13.777},
+  urldate = {2021-04-16},
+  abstract = {Leaf area and its spatial distribution are key canopy parameters needed to model the radiation regime within a forest and to compute the mass and energy exchange between a forest and the atmosphere. A much larger proportion of available net radiation is received at the forest floor in open-canopy forests than in closed-canopy forests. The proportion of ecosystem water vapor exchange (λE) and sensible heat exchange from the forest floor is therefore expected to be larger in open-canopy forests than in closed-canopy forests.We used a combination of optical and canopy geometry measurements, and robust one- and three-dimensional models to evaluate the influence of canopy architecture and radiative transfer on estimates of carbon, water and energy exchange of a ponderosa pine (Pinus ponderosa Dougl. ex Laws.) forest. Three-dimensional model simulations showed that the average probability of diffuse and direct radiation transmittance to the forest floor was greater than if a random distribution of foliage had been assumed. Direct and diffuse radiation transmittance to the forest floor was 28 and 39\%, respectively, in the three-dimensional model simulations versus 23 and 31\%, respectively, in the one-dimensional model simulations. The assumption of randomly distributed foliage versus inclusion of clumping factors in a one-dimensional, multi-layer biosphere-atmosphere gas exchange model (CANVEG) had the greatest effect on simulated annual net ecosystem exchange (NEE) and soil evaporation. Assuming random distribution, NEE was 41\% lower, net photosynthesis 3\% lower, total λE 10\% lower, and soil evaporation 40\% lower. The same comparisons at LAI 5 showed a similar effect on annual NEE estimates (37\%) and λE (12\%), but a much larger effect on net photosynthesis (20\%), suggesting that, at low LAI, canopies are mostly sunlit, so that redistribution of light has little effect on net photosynthesis, whereas the effect on net photosynthesis is much greater at high LAIs.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\7MPYQ6GC\\Law et al. - 2001 - Leaf area distribution and radiative transfer in o.pdf},
+  number = {12-13}
+}
+
+@article{lawLeafAreaDistribution2001a,
+  title = {Leaf Area Distribution and Radiative Transfer in Open-Canopy Forests: Implications for Mass and Energy Exchange},
+  shorttitle = {Leaf Area Distribution and Radiative Transfer in Open-Canopy Forests},
+  author = {Law, B. E. and Cescatti, A. and Baldocchi, D. D.},
+  date = {2001-08-01},
+  journaltitle = {Tree Physiology},
+  volume = {21},
+  pages = {777--787},
+  issn = {0829-318X, 1758-4469},
+  doi = {10.1093/treephys/21.12-13.777},
+  url = {https://academic.oup.com/treephys/article-lookup/doi/10.1093/treephys/21.12-13.777},
+  urldate = {2021-04-16},
+  abstract = {Leaf area and its spatial distribution are key canopy parameters needed to model the radiation regime within a forest and to compute the mass and energy exchange between a forest and the atmosphere. A much larger proportion of available net radiation is received at the forest floor in open-canopy forests than in closed-canopy forests. The proportion of ecosystem water vapor exchange (λE) and sensible heat exchange from the forest floor is therefore expected to be larger in opencanopy forests than in closed-canopy forests.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\F48LKQWM\\Law et al. - 2001 - Leaf area distribution and radiative transfer in o.pdf},
+  langid = {english},
+  number = {12-13}
+}
+
+@online{LeafAreaDistribution,
+  title = {Leaf Area Distribution and Radiative Transfer in Open-Canopy Forests: Implications for Mass and Energy Exchange | {{Tree Physiology}} | {{Oxford Academic}}},
+  url = {https://academic-oup-com.smithsonian.idm.oclc.org/treephys/article/21/12-13/777/1626074?login=true},
+  urldate = {2021-04-16},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\HZ44TYFB\\1626074.html}
+}
+
+@online{LeafAreaDistributiona,
+  title = {Leaf Area Distribution and Radiative Transfer in Open-Canopy Forests: Implications for Mass and Energy Exchange | {{Tree Physiology}} | {{Oxford Academic}}},
+  url = {https://academic-oup-com.smithsonian.idm.oclc.org/treephys/article/21/12-13/777/1626074?login=true},
+  urldate = {2021-04-16}
 }
 
 @online{LeafFunctionalTrait,
@@ -5707,6 +5829,12 @@
   urldate = {2021-04-14}
 }
 
+@online{PhysRevLett,
+  title = {Phys. {{Rev}}. {{Lett}}. 110, 018104 (2013) - {{Physical Limits}} to {{Leaf Size}} in {{Tall Trees}}},
+  url = {https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.110.018104},
+  urldate = {2021-04-16}
+}
+
 @article{pincebourdeNarrowSafetyMargin2019,
   title = {Narrow Safety Margin in the Phyllosphere during Thermal Extremes},
   author = {Pincebourde, Sylvain and Casas, Jérôme},
@@ -7649,6 +7777,22 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\V9NXGB7V\\nph.html}
 }
 
+@article{urbanIncreaseLeafTemperature2017,
+  title = {Increase in Leaf Temperature Opens Stomata and Decouples Net Photosynthesis from Stomatal Conductance in {{Pinus}} Taeda and {{Populus}} Deltoides x Nigra},
+  author = {Urban, Josef and Ingwers, Miles W. and McGuire, Mary Anne and Teskey, Robert O.},
+  date = {2017-03-01},
+  journaltitle = {Journal of Experimental Botany},
+  volume = {68},
+  pages = {1757--1767},
+  issn = {0022-0957},
+  doi = {10.1093/jxb/erx052},
+  url = {https://doi.org/10.1093/jxb/erx052},
+  urldate = {2021-04-16},
+  abstract = {The effect of temperature on stomatal conductance (gs) and corresponding gas exchange parameters was studied in two tree species with contrasting leaf anatomy and ecophysiology—a broadleaf angiosperm, Populus deltoides x nigra (poplar), and a needle-leaf gymnosperm, Pinus taeda (loblolly pine). Experiments were conducted in growth chambers across a leaf temperature range of 19–48°C. Manipulations of temperature were done in well-watered and drought soil conditions and under ambient (400 ppm) and elevated (800 ppm) air CO2 concentrations. Increases in leaf temperature caused stomatal opening at both ambient and elevated [CO2]. The gs increased by 42\% in poplar and by 40\% in loblolly pine when leaf temperature increased from 30°C to 40°C at a vapour pressure difference of 1 kPa. Stomatal limitation to photosynthesis decreased in elevated temperature in loblolly pine but not in poplar. The ratio of net photosynthesis to gs depended on leaf temperature, especially at high temperatures. Evaporative cooling of transpiring leaves resulted in reductions in leaf temperature up to 9°C in well-watered poplar but only 1°C in drought-stressed poplar and in loblolly pine. As global mean temperatures rise and temperature extremes become more frequent and severe, understanding the effect of temperature on gs, and modelling that relationship, will become increasingly important.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\GWCPXD2Z\\Urban et al. - 2017 - Increase in leaf temperature opens stomata and dec.pdf},
+  number = {7}
+}
+
 @article{urbanInductionPhotosynthesisImportance2007,
   title = {Induction of Photosynthesis and Importance of Limitations during the Induction Phase in Sun and Shade Leaves of Five Ecologically Contrasting Tree Species from the Temperate Zone},
   author = {Urban, Otmar and Kosvancová, Martina and Marek, Michal V. and Lichtenthaler, Hartmut K.},
@@ -8053,6 +8197,22 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\4FMBZHYD\\Wittich et al. - 2012 - Altitudinal Change in the Photosynthetic Capacity .pdf},
   langid = {english},
   number = {6}
+}
+
+@article{woodruffCoordinationLeafStructure2009,
+  title = {Coordination of Leaf Structure and Gas Exchange along a Height Gradient in a Tall Conifer},
+  author = {Woodruff, D.R. and Meinzer, F.C. and Lachenbruch, B. and Johnson, D.M.},
+  date = {2009-02-01},
+  journaltitle = {Tree Physiology},
+  volume = {29},
+  pages = {261--272},
+  issn = {0829-318X},
+  doi = {10.1093/treephys/tpn024},
+  url = {https://doi.org/10.1093/treephys/tpn024},
+  urldate = {2021-04-16},
+  abstract = {The gravitational component of water potential and frictional resistance during transpiration lead to substantial reductions in leaf water potential (Ψl) near the tops of tall trees, which can influence both leaf growth and physiology. We examined the relationships between morphological features and gas exchange in foliage collected near the tops of Douglas-fir (Pseudotsuga menziesii (Mirb.) Franco) trees of different height classes ranging from 5 to 55~m. This sampling allowed us to investigate the effects of tree height on leaf structural characteristics in the absence of potentially confounding factors such as irradiance, temperature, relative humidity and branch length. The use of cut foliage for measurement of intrinsic gas-exchange characteristics allowed identification of height-related trends without the immediate influences of path length and gravity. Stomatal density, needle length, needle width and needle area declined with increasing tree height by 0.70~mm−2~m−1, 0.20~mm~m−1, 5.9~×~10−3~mm~m−1 and 0.012~mm2~m−1, respectively. Needle thickness and mesophyll thickness increased with tree height by 4.8~×~10−2~mm~m−1 and 0.74~μm~m−1, respectively. Mesophyll conductance (gm) and CO2 assimilation in ambient [CO2] (Aamb) decreased by 1.1~mmol~m−2~s−1~per~m and 0.082~μmol~m−2~s−1~per~m increase in height, respectively. Mean reductions in gm and Aamb of foliage from 5 to 55~m were 47\% and 42\%, respectively. The observed trend in Aamb was associated with gm and several leaf anatomic characteristics that are likely to be determined by the prevailing vertical tension gradient during foliar development. A linear increase in foliar δ13C values with height (0.042‰~m−1) implied that relative stomatal and mesophyll limitations of photosynthesis in intact shoots increased with height. These data suggest that increasing height leads to both fixed structural constraints on leaf gas exchange and dynamic constraints related to prevailing stomatal behavior.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\TT2DH8AD\\Woodruff et al. - 2009 - Coordination of leaf structure and gas exchange al.pdf},
+  number = {2}
 }
 
 @article{woodsStructureMoreImportant2018,
